@@ -16,6 +16,7 @@ ver 0.24 (not yet released)
   - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt" and "gt"
   - consume only idle flags that were subscribed to
   - volume command is no longer deprecated
+  - new "available" subcommand for tagtypes
 * database
   - attribute "added" shows when each song was added to the database
   - fix integer overflows with 64-bit inode numbers
